command to bootstrap taxomachine